--- a/GouGou-Live/Classes/Login/Controllers/Registe/RegisteViewController.xib
+++ b/GouGou-Live/Classes/Login/Controllers/Registe/RegisteViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1912" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RegisteViewController">
@@ -20,7 +20,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oso-Bk-AQZ">
-                    <rect key="frame" x="44" y="93" width="1" height="30"/>
+                    <rect key="frame" x="44" y="13" width="1" height="30"/>
                     <color key="backgroundColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="1" id="Z0M-ht-8LJ"/>
@@ -30,18 +30,18 @@
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="iconfont-dianhua" translatesAutoresizingMaskIntoConstraints="NO" id="6zO-o2-tW2">
-                    <rect key="frame" x="15" y="99" width="18" height="18"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconfont-dianhua" translatesAutoresizingMaskIntoConstraints="NO" id="6zO-o2-tW2">
+                    <rect key="frame" x="15" y="20" width="18" height="18"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iFS-1G-bxP">
-                    <rect key="frame" x="15" y="132" width="350" height="2"/>
+                    <rect key="frame" x="15" y="52" width="350" height="2"/>
                     <color key="backgroundColor" red="0.82352941176470584" green="0.82352941176470584" blue="0.82352941176470584" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="2" id="7cJ-4k-6cy"/>
                     </constraints>
                 </view>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yul-t8-uIX">
-                    <rect key="frame" x="60" y="154" width="215" height="17"/>
+                    <rect key="frame" x="60" y="74" width="215" height="17"/>
                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
@@ -50,7 +50,7 @@
                     </connections>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S0I-fa-vqh">
-                    <rect key="frame" x="44" y="148" width="1" height="30"/>
+                    <rect key="frame" x="44" y="68" width="1" height="30"/>
                     <color key="backgroundColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="CVJ-hL-kZG"/>
@@ -61,14 +61,14 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="验证码蓝" translatesAutoresizingMaskIntoConstraints="NO" id="RAC-Xt-oZv">
-                    <rect key="frame" x="15" y="153" width="16" height="20"/>
+                    <rect key="frame" x="15" y="73" width="16" height="20"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P2g-C8-DmJ">
-                    <rect key="frame" x="15" y="186" width="350" height="2"/>
+                    <rect key="frame" x="15" y="106" width="350" height="2"/>
                     <color key="backgroundColor" red="0.82352941176470584" green="0.82352941176470584" blue="0.82352941176470584" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dgT-Uv-A0j">
-                    <rect key="frame" x="285" y="149" width="80" height="28"/>
+                    <rect key="frame" x="285" y="69" width="80" height="28"/>
                     <color key="backgroundColor" red="0.59999999999999998" green="0.80000000000000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="80" id="elV-CA-RLf"/>
@@ -85,8 +85,41 @@
                         <action selector="clickGetCodeAction:" destination="-1" eventType="touchUpInside" id="LIe-OI-615"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LI1-6Z-22v">
+                    <rect key="frame" x="32" y="202" width="20" height="22"/>
+                    <state key="normal" image="圆角矩形-9"/>
+                    <state key="selected" image="对号协议"/>
+                    <connections>
+                        <action selector="clickReadBtnAction:" destination="-1" eventType="touchUpInside" id="ekp-Mw-gNb"/>
+                    </connections>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我已阅读并同意" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EdI-v8-QiA">
+                    <rect key="frame" x="62" y="205" width="98" height="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AYs-Nh-em6">
+                    <rect key="frame" x="160" y="199" width="112" height="29"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <state key="normal" title="《用户协议链接》">
+                        <color key="titleColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="clickProtocolAction:" destination="-1" eventType="touchUpInside" id="kAn-Zi-X56"/>
+                    </connections>
+                </button>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="仅支持中国大陆手机" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Iix-s8-gJV">
+                    <rect key="frame" x="60" y="20" width="285" height="17"/>
+                    <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
+                    <connections>
+                        <action selector="phoneTextFieldEditing:" destination="-1" eventType="editingDidBegin" id="Zge-cc-SOj"/>
+                    </connections>
+                </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ueL-h5-qmI">
-                    <rect key="frame" x="32" y="228" width="311" height="44"/>
+                    <rect key="frame" x="32" y="148" width="311" height="44"/>
                     <color key="backgroundColor" red="0.59999999999999998" green="0.80000000000000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="311" id="7jZ-2G-ZEI"/>
@@ -106,39 +139,6 @@
                         <action selector="clickSureBtnAction:" destination="-1" eventType="touchUpInside" id="NDp-Hj-wbQ"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LI1-6Z-22v">
-                    <rect key="frame" x="32" y="282" width="20" height="22"/>
-                    <state key="normal" image="圆角矩形-9"/>
-                    <state key="selected" image="对号协议"/>
-                    <connections>
-                        <action selector="clickReadBtnAction:" destination="-1" eventType="touchUpInside" id="ekp-Mw-gNb"/>
-                    </connections>
-                </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我已阅读并同意" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EdI-v8-QiA">
-                    <rect key="frame" x="62" y="285" width="98" height="17"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AYs-Nh-em6">
-                    <rect key="frame" x="160" y="279" width="112" height="29"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <state key="normal" title="《用户协议链接》">
-                        <color key="titleColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="clickProtocolAction:" destination="-1" eventType="touchUpInside" id="kAn-Zi-X56"/>
-                    </connections>
-                </button>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="仅支持中国大陆手机" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Iix-s8-gJV">
-                    <rect key="frame" x="60" y="100" width="285" height="17"/>
-                    <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
-                    <connections>
-                        <action selector="phoneTextFieldEditing:" destination="-1" eventType="editingDidBegin" id="Zge-cc-SOj"/>
-                    </connections>
-                </textField>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
@@ -167,7 +167,7 @@
                 <constraint firstItem="Iix-s8-gJV" firstAttribute="leading" secondItem="oso-Bk-AQZ" secondAttribute="trailing" constant="15" id="brr-Y9-7DG"/>
                 <constraint firstItem="6zO-o2-tW2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="gDq-mK-Mpx"/>
                 <constraint firstItem="EdI-v8-QiA" firstAttribute="centerY" secondItem="LI1-6Z-22v" secondAttribute="centerY" id="hOW-WU-xNe"/>
-                <constraint firstItem="Iix-s8-gJV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="100" id="is3-bQ-Oys"/>
+                <constraint firstItem="Iix-s8-gJV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="is3-bQ-Oys"/>
                 <constraint firstAttribute="trailing" secondItem="Iix-s8-gJV" secondAttribute="trailing" constant="30" id="jcW-qu-vQN"/>
                 <constraint firstItem="ueL-h5-qmI" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="mn1-kF-21U"/>
                 <constraint firstItem="P2g-C8-DmJ" firstAttribute="trailing" secondItem="iFS-1G-bxP" secondAttribute="trailing" id="oFI-OI-gbh"/>
